[LinalgExt] Generalize ArgCompareOp in GPUGeneralizeNamedOpsPass (#23015)
This PR adds `ArgCompareOp `generalization to
`GPUGeneralizeNamedOpsPass`, converting it to a `linalg.generic`
operation by inlining the comparator region. This enables `ArgCompareOp
`to flow through the VectorDistribute pipeline.

## Background
ArgCompareOp performs a reduction over a specified dimension, returning
both the selected value and its index. It uses a user-defined comparator
region that can express:
- **argmax**: arith.cmpf ogt, %a, %b
- **argmin**: arith.cmpf olt, %a, %b
- **Custom logic**: Any boolean predicate comparing two values

## Approach
The generalization inlines the comparator region directly into a
linalg.generic body, using arith.select for both value and index
updates. This approach:
- Avoids special-casing different comparison predicates
- Preserves the original comparison semantics from the region
- Produces a uniform output regardless of the specific comparator used
- Handles optional index_base offset for split reduction scenarios
- Skips arith.index_cast when output index type is already index

ci-extra: test_torch

Issue: https://github.com/iree-org/iree/issues/23005

---------

Signed-off-by: Bangtian Liu <liubangtian@gmail.com>
Signed-off-by: Keshav Vinayak Jha <keshavvinayakjha@gmail.com>

--- a/compiler/src/iree/compiler/Dialect/LinalgExt/Transforms/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Dialect/LinalgExt/Transforms/CMakeLists.txt
@@ -36,6 +36,7 @@ iree_cc_library(
     "DecomposeMapScatter.cpp"
     "DecomposeWinogradPass.cpp"
     "FoldUnitExtentDims.cpp"
+    "GeneralizeLinalgExtOps.cpp"
     "PadContractionToBlockSize.cpp"
     "Passes.cpp"
     "ReshapeFusion.cpp"
