--- a/compiler/src/iree/compiler/Dialect/LinalgExt/Transforms/BUILD.bazel
+++ b/compiler/src/iree/compiler/Dialect/LinalgExt/Transforms/BUILD.bazel
@@ -39,6 +39,7 @@ iree_compiler_cc_library(
         "DecomposeMapScatter.cpp",
         "DecomposeWinogradPass.cpp",
         "FoldUnitExtentDims.cpp",
+        "GeneralizeLinalgExtOps.cpp",
         "PadContractionToBlockSize.cpp",
         "Passes.cpp",
         "ReshapeFusion.cpp",
