[Codegen] Add pass to convert workgroup foralls to pcf
Converts scf.forall with workgroup mappings to pcf.loop with linearized
workgroup ids. This is the quick and dirty path to replacing scf.forall
in codegen pipelines with pcf without needing to reimplement everything.
By keeping tile + fuse intact, this pass lets us work on replacing
pieces incrementally.

--- a/compiler/src/iree/compiler/Codegen/Common/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/Common/BUILD.bazel
@@ -88,6 +88,7 @@ iree_compiler_cc_library(
         "ConvertBf16ToUInt16Buffers.cpp",
         "ConvertToDestinationPassingStylePass.cpp",
         "ConvertUnsupportedFloatArithPass.cpp",
+        "ConvertWorkgroupForallToPCF.cpp",
         "ConvolutionToIGEMM.cpp",
         "DecomposeAffineOpsPass.cpp",
         "DecomposeConvolutionToLowerDimOps.cpp",
