Adding zero-copy JSON parsing utilities.
Extracts JSON parsing from safetensors_parser.c into a reusable module
at iree/base/internal/json.{h,c}. The parser operates on string views
without allocation and implements RFC 8259 with proper validation:
- Control characters (0x00-0x1F) must be escaped
- Trailing commas are rejected
- Unicode escape sequences validated

New functionality for tokenizer vocabulary loading:
- iree_json_enumerate_array() for array iteration
- iree_json_unescape_string() for UTF-8 decoding with surrogate pairs
- Number parsing helpers (int64, uint64, double)

--- a/runtime/src/iree/io/formats/safetensors/CMakeLists.txt
+++ b/runtime/src/iree/io/formats/safetensors/CMakeLists.txt
@@ -19,6 +19,7 @@ iree_cc_library(
     "safetensors_parser.c"
   DEPS
     iree::base
+    iree::base::internal::json
     iree::io::file_handle
     iree::io::parameter_index
   PUBLIC
