--- a/runtime/src/iree/io/formats/safetensors/BUILD.bazel
+++ b/runtime/src/iree/io/formats/safetensors/BUILD.bazel
@@ -22,6 +22,7 @@ iree_runtime_cc_library(
     ],
     deps = [
         "//runtime/src/iree/base",
+        "//runtime/src/iree/base/internal:json",
         "//runtime/src/iree/io:file_handle",
         "//runtime/src/iree/io:parameter_index",
     ],
