Refactor methods that can be shared to Utils.h/cpp
Signed-off-by: hanhanW <hanhan0912@gmail.com>

--- a/compiler/src/iree/compiler/Dialect/Stream/Transforms/BUILD.bazel
+++ b/compiler/src/iree/compiler/Dialect/Stream/Transforms/BUILD.bazel
@@ -54,12 +54,14 @@ iree_compiler_cc_library(
         "SpecializeEncodings.cpp",
         "SyncInitializers.cpp",
         "UnifyEncodingForGlobals.cpp",
+        "Utils.cpp",
         "VerifyAffinities.cpp",
         "VerifyAsyncAccessRanges.cpp",
         "VerifyLowerings.cpp",
     ],
     hdrs = [
         "Passes.h",
+        "Utils.h",
     ],
     deps = [
         ":PassesIncGen",
