--- a/compiler/src/iree/compiler/Codegen/Dialect/GPU/TargetUtils/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Codegen/Dialect/GPU/TargetUtils/CMakeLists.txt
@@ -20,6 +20,7 @@ iree_cc_library(
     "ReductionConfigUtils.cpp"
   DEPS
     LLVMSupport
+    MLIRAMDGPUUtils
     MLIRAnalysis
     MLIRFunctionInterfaces
     MLIRIR
