--- a/compiler/src/iree/compiler/Codegen/Common/test/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/Common/test/BUILD.bazel
@@ -108,6 +108,7 @@ iree_lit_test_suite(
             "reductions.mlir",
             "rematerialize_parallel_ops.mlir",
             "remove_dead_allocs.mlir",
+            "remove_index_hints.mlir",
             "remove_single_iteration_loop.mlir",
             "resolve_swizzle_hints.mlir",
             "resolve_workgroup_count_hints.mlir",
