[CI] update to onnx_model ci to use huggingface token
Signed-off-by: Muzammiluddin Syed <muzasyed@amd.com>

--- a/.github/workflows/pkgci_test_onnx.yml
+++ b/.github/workflows/pkgci_test_onnx.yml
@@ -204,3 +204,5 @@ jobs:
               --timeout=120 \
               --durations=0 \
               --test-config-file=${CONFIG_FILE_PATH}
+        env:
+          HF_TOKEN: ${{ secrets.HF_TOKEN }}
