Adding iree-tokenize CLI tool. Command-line tool for tokenizing text using HuggingFace tokenizer.json files. Supports encode, decode, batch, and streaming modes with JSON output.
Usage:
iree-tokenize tokenizer.json "Hello, world!"

iree-tokenize tokenizer.json --decode "101,7592,1010,2088,999,102"

echo -e "Hello\nWorld" | iree-tokenize tokenizer.json --batch

iree-tokenize tokenizer.json --info

Options:
--decode      Decode mode (input is comma-separated IDs)
--no_special  Don't add BOS/EOS/CLS/SEP tokens
--batch       Read lines from stdin
--stream      Stream stdin continuously
--max_length  Truncate output to N tokens
--info        Show tokenizer info instead of encoding

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -257,6 +257,22 @@ iree_cc_binary(
   INSTALL_COMPONENT IREETools-Runtime
 )
 
+iree_cc_binary(
+  NAME
+    iree-tokenize
+  SRCS
+    "iree-tokenize-main.c"
+  DEPS
+    iree::base
+    iree::base::internal::flags
+    iree::base::internal::unicode
+    iree::io::file_handle
+    iree::tokenizer::tokenizer
+    iree::tokenizer::huggingface::tokenizer_json
+  COVERAGE ${IREE_ENABLE_RUNTIME_COVERAGE}
+  INSTALL_COMPONENT IREETools-Runtime
+)
+
 if(IREE_BUILD_COMPILER)
   if(IREE_LLVM_LINK_TARGET)
     install(
