--- a/tools/test/CMakeLists.txt
+++ b/tools/test/CMakeLists.txt
@@ -38,6 +38,7 @@ iree_lit_test_suite(
     "iree-run-module-outputs.mlir"
     "iree-run-module.mlir"
     "iree-tblgen-json.td"
+    "iree-tokenize.txt"
     "multiple_args.mlir"
     "multiple_exported_functions.mlir"
     "null_values.mlir"
@@ -59,6 +60,7 @@ iree_lit_test_suite(
     iree-run-mlir
     iree-run-module
     iree-tblgen
+    iree-tokenize
     not
   DATA
     MLIROpBaseTdFiles
@@ -70,6 +72,7 @@ iree_lit_test_suite(
     iree-link-module-a.mlir
     iree-link-module-b.mlir
     iree-link-module-c.mlir
+    iree-tokenize.json
     iree::compiler::Utils::td_files
     parameters_a.safetensors
     parameters_b.safetensors
