--- a/tools/BUILD.bazel
+++ b/tools/BUILD.bazel
@@ -14,6 +14,7 @@
 # Programs with a dependency on the compiler are not designed to run on device
 # platforms (e.g. Android), so they are tagged "hostonly".
 
+load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
 load("//build_tools/bazel:build_defs.oss.bzl", "iree_compiler_cc_binary", "iree_runtime_cc_binary")
 
 package(
@@ -231,6 +232,19 @@ iree_compiler_cc_binary(
         "@llvm-project//mlir:MlirTableGenMain",
         "@llvm-project//mlir:Support",
         "@llvm-project//mlir:TableGen",
+    ],
+)
+
+iree_runtime_cc_binary(
+    name = "iree-tokenize",
+    srcs = ["iree-tokenize-main.c"],
+    deps = [
+        "//runtime/src/iree/base",
+        "//runtime/src/iree/base/internal:flags",
+        "//runtime/src/iree/base/internal:unicode",
+        "//runtime/src/iree/io:file_handle",
+        "//runtime/src/iree/tokenizer",
+        "//runtime/src/iree/tokenizer/huggingface:tokenizer_json",
     ],
 )
 
