--- a/tools/test/BUILD.bazel
+++ b/tools/test/BUILD.bazel
@@ -49,6 +49,7 @@ iree_lit_test_suite(
             "iree-run-module-outputs.mlir",
             "iree-run-module.mlir",
             "iree-tblgen-json.td",
+            "iree-tokenize.txt",
             "iree-run-module-in-place.mlir",
             "multiple_args.mlir",
             "multiple_exported_functions.mlir",
@@ -77,6 +78,7 @@ iree_lit_test_suite(
     data = [
         "echo_npy.py",
         "iree-link-anonymous.mlir",
+        "iree-tokenize.json",
         "iree-link-globals-a.mlir",
         "iree-link-globals-b.mlir",
         "iree-link-globals-c.mlir",
@@ -109,6 +111,7 @@ iree_lit_test_suite(
         "//tools:iree-run-mlir",
         "//tools:iree-run-module",
         "//tools:iree-tblgen",
+        "//tools:iree-tokenize",
         "@llvm-project//lld",
         "@llvm-project//llvm:FileCheck",
         "@llvm-project//llvm:not",
