[CI] Add MI355 e2e tests
Signed-off-by: Jorn Tuyls <jorn.tuyls@gmail.com>

--- a/.github/workflows/pkgci.yml
+++ b/.github/workflows/pkgci.yml
@@ -58,6 +58,12 @@ jobs:
     if: contains(fromJson(needs.setup.outputs.enabled-jobs), 'test_amd_mi325')
     uses: ./.github/workflows/pkgci_test_amd_mi325.yml
 
+  test_amd_mi355:
+    name: Test AMD MI355
+    needs: [setup, build_packages]
+    if: contains(fromJson(needs.setup.outputs.enabled-jobs), 'test_amd_mi355')
+    uses: ./.github/workflows/pkgci_test_amd_mi355.yml
+
   test_amd_w7900:
     name: Test AMD W7900
     needs: [setup, build_packages]
