--- a/compiler/src/iree/compiler/Dialect/Stream/Transforms/test/e2e/BUILD.bazel
+++ b/compiler/src/iree/compiler/Dialect/Stream/Transforms/test/e2e/BUILD.bazel
@@ -4,9 +4,10 @@
 # See https://llvm.org/LICENSE.txt for license information.
 # SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception
 
-# End-to-end tests for Stream dialect transformation pipeline.
-# These tests validate full pipeline behavior (partitioning, scheduling,
-# allocation, timepoint optimization) rather than individual pass behavior.
+# Integration-like end-to-end tests that span multiple pipeline stages.
+# Unlike Transforms/test/ which tests individual passes in isolation,
+# these tests validate full pipeline behavior (partitioning, scheduling,
+# allocation, timepoint optimization) using --iree-stream-transformation-pipeline.
 
 load("//build_tools/bazel:enforce_glob.bzl", "enforce_glob")
 load("//build_tools/bazel:iree_lit_test.bzl", "iree_lit_test_suite")
