Adding vm.call.yieldable op to finally fix up yieldable calls. (#23044)
**Breaking change**: bumps bytecode module version from 16 to 17.

### Summary

Introduces `vm.call.yieldable` and `vm.call.variadic.yieldable` ops for
explicit handling of calls that may yield execution, along with
YIELD/UNWIND feature bits in the bytecode format.

### Background

The VM needs to support calls that may yield execution (e.g., async
device operations like `hal.fence.await`). Previously, this required
runtime analysis to determine if functions could yield. The new approach
makes yield points explicit in the IR and bytecode, enabling:

- Clean register lifetime across yield points (results flow as block
arguments)
- Proper stack unwinding across module boundaries (native, bytecode, C,
etc.)
- Simplified non-yieldable call implementation for the common case
- Static analysis elimination via feature bits

### Changes

**Compiler (IR + passes)**:
- New `vm.call.yieldable` op: terminator that combines a call with an
explicit resume point
- New `vm.call.variadic.yieldable` op: variadic variant
- `AnnotateFunctions` pass: propagates `vm.yield`/`vm.unwind` attributes
transitively
- `ConvertToYieldableCalls` pass: rewrites calls to yieldable functions
- Updated `MaterializeRefDiscards` to handle ref cleanup across yield
points
- Register allocation updates for yieldable call patterns

**Runtime (bytecode)**:
- New `CallYieldable` and `CallVariadicYieldable` opcodes
- YIELD/UNWIND feature bits in bytecode module schema
- Dispatcher support for yieldable calls with proper continuation
handling
- Verifier updates for new ops

**Tests**:
- Extensive lit tests for new passes and ops
- Expanded `dispatch_async_test.cc` with yielding scenarios
- New async ops tests covering yieldable call patterns

### Example

```mlir
^bb0:
  vm.call.yieldable @hal.fence.await(%timeout, %fence) : (i32, !vm.ref<?>) -> ^resume(i32)
^resume(%result : i32):
  vm.return %result
```

--- a/compiler/src/iree/compiler/Dialect/VM/Transforms/BUILD.bazel
+++ b/compiler/src/iree/compiler/Dialect/VM/Transforms/BUILD.bazel
@@ -20,7 +20,9 @@ package(
 iree_compiler_cc_library(
     name = "Transforms",
     srcs = [
+        "AnnotateFunctions.cpp",
         "Conversion.cpp",
+        "ConvertToYieldableCalls.cpp",
         "DeduplicateRodata.cpp",
         "DropEmptyModuleInitializers.cpp",
         "DropUnusedCalls.cpp",
