--- a/compiler/src/iree/compiler/Dialect/VM/Transforms/test/BUILD.bazel
+++ b/compiler/src/iree/compiler/Dialect/VM/Transforms/test/BUILD.bazel
@@ -16,6 +16,8 @@ iree_lit_test_suite(
     name = "lit",
     srcs = enforce_glob(
         [
+            "annotate_functions.mlir",
+            "convert_to_yieldable_calls.mlir",
             "deduplicate_rodata.mlir",
             "drop_empty_module_initializers.mlir",
             "drop_unused_calls.mlir",
