--- a/compiler/src/iree/compiler/Dialect/VM/Transforms/test/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Dialect/VM/Transforms/test/CMakeLists.txt
@@ -14,6 +14,8 @@ iree_lit_test_suite(
   NAME
     lit
   SRCS
+    "annotate_functions.mlir"
+    "convert_to_yieldable_calls.mlir"
     "deduplicate_rodata.mlir"
     "drop_empty_module_initializers.mlir"
     "drop_unused_calls.mlir"
