Adding iree-tokenize --json_string flag. This interprets the input as a JSON-encoded string, supporting \uXXXX escape sequences. These escapes are pure ASCII and work identically across all platforms.
The test now uses:
```
iree-tokenize tokenizer.json --json_string "\u65e5\u672c\u8a9e\u30c6\u30b9\u30c8"
```
instead of literal Japanese characters.

This reuses the existing iree_json_unescape_string() function from
iree/base/internal/json.h, which already handles all RFC 8259 escape
sequences including surrogate pairs for characters outside the BMP.

This was required to work around the Windows sadness sandwich of
powershell/cmd/lit/python/C that all come together in the tool smoketest.

--- a/tools/BUILD.bazel
+++ b/tools/BUILD.bazel
@@ -241,6 +241,7 @@ iree_runtime_cc_binary(
     deps = [
         "//runtime/src/iree/base",
         "//runtime/src/iree/base/internal:flags",
+        "//runtime/src/iree/base/internal:json",
         "//runtime/src/iree/base/internal:unicode",
         "//runtime/src/iree/io:file_handle",
         "//runtime/src/iree/tokenizer",
