[CPU] Add fp8 emulation support for CPU backend
Extend ConvertUnsupportedFloatArithPass to handle the CPU backend by
emulating fp8 arithmetic operations through f32. This is needed because
LLVM doesn't natively support fptrunc/fpext for fp8 types.

Key changes:
- Add TruncFToFP8 pattern: emulates f32 -> fp8 using integer bit
  manipulation (extract sign/exp/mant, adjust bias, round, pack to i8).
- Add ExtFFromFP8 pattern: emulates fp8 -> f32 using integer bit
  manipulation (unpack from i8, adjust bias, pack to i32).
- Support all fp8 formats: E5M2FNUZ, E4M3FNUZ, E5M2, E4M3FN.
- Handle both scalar and vector types.
- Add lit tests for CPU target emulation.
- Add e2e tests (small_float_arith.mlir) for CPU backend.

Known limitations (for implementation simplicity):
- Denormals are flushed to zero (proper subnormal handling would require
  leading zero count and dynamic mantissa shifting).
- Rounding is half-away-from-zero, not IEEE 754 round-half-to-even.

Signed-off-by: hanhanW <hanhan0912@gmail.com>

--- a/tests/e2e/linalg/CMakeLists.txt
+++ b/tests/e2e/linalg/CMakeLists.txt
@@ -22,6 +22,7 @@ iree_check_single_backend_test_suite(
     "pack.mlir"
     "pack_dynamic_inner_tiles.mlir"
     "pack_i8.mlir"
+    "small_float_arith.mlir"
     "softmax.mlir"
     "subbyte_to_fp.mlir"
     "unpack.mlir"
