Improving bazel infrastructure for testing and MLIR experimentation.
This commit adds three new harnesses for rapid development:

1. gtest_harness.h - Google Test with IREE status matchers
2. gbenchmark_harness.h - Google Benchmark with IREE base types
3. MlirTransformHarness.h - MLIR transformation experiments w/ I/O

The MLIR harness uses standard MLIR patterns (mlir::openInputFile,
parseSourceFile) for transparent .mlir/.mlirbc support, llvm::cl for
flag parsing, and supports pass pipelines before/after transforms via
--pass-pipeline-before/--pass-pipeline-after flags.

Also adds 'localdev' bazel config for faster local iteration:
- Persistent disk cache to speed up clean builds
- Skymeld for better parallelism
- Ramdisk sandbox to reduce I/O bottleneck
Support for 'mold' config required routing a CI flag around it.

These harnesses integrate with the iree-bazel-try tool (coming soon)
for zero-boilerplate experimentation, but are useful on their own, too.

--- a/compiler/src/iree/compiler/Tools/BUILD.bazel
+++ b/compiler/src/iree/compiler/Tools/BUILD.bazel
@@ -5,7 +5,7 @@
 # SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception
 
 load("@bazel_skylib//rules:common_settings.bzl", "bool_flag")
-load("//build_tools/bazel:build_defs.oss.bzl", "iree_compiler_cc_library")
+load("//build_tools/bazel:build_defs.oss.bzl", "iree_compiler_cc_library", "iree_compiler_cc_test")
 
 package(
     default_visibility = ["//visibility:public"],
@@ -208,4 +208,29 @@ iree_compiler_cc_library(
         ],
         "//conditions:default": [],
     }),
+)
+
+iree_compiler_cc_library(
+    name = "MlirTransformHarness",
+    hdrs = ["MlirTransformHarness.h"],
+    deps = [
+        ":init_passes_and_dialects",
+        "@llvm-project//llvm:Support",
+        "@llvm-project//mlir:BytecodeWriter",
+        "@llvm-project//mlir:IR",
+        "@llvm-project//mlir:Parser",
+        "@llvm-project//mlir:Pass",
+        "@llvm-project//mlir:Rewrite",
+        "@llvm-project//mlir:Support",
+        "@llvm-project//mlir:TransformUtils",
+    ],
+)
+
+iree_compiler_cc_test(
+    name = "MlirTransformHarnessDemo",
+    srcs = ["MlirTransformHarnessDemo.cpp"],
+    data = ["MlirTransformHarnessDemo.mlir"],
+    deps = [
+        ":MlirTransformHarness",
+    ],
 )
