--- a/tests/e2e/linalg_ext_ops/CMakeLists.txt
+++ b/tests/e2e/linalg_ext_ops/CMakeLists.txt
@@ -18,6 +18,7 @@ iree_check_single_backend_test_suite(
     "attention.mlir"
     "attention_i1_mask_encoding.mlir"
     "gather.mlir"
+    "map_gather.mlir"
     "map_scatter.mlir"
     "scan.mlir"
     "scatter.mlir"
@@ -57,6 +58,7 @@ iree_check_single_backend_test_suite(
   SRCS
     "arg_compare.mlir"
     "gather.mlir"
+    "map_gather.mlir"
     "map_scatter.mlir"
     "scan.mlir"
     "scatter.mlir"
@@ -100,6 +102,7 @@ iree_check_single_backend_test_suite(
   SRCS
     "arg_compare.mlir"
     "gather.mlir"
+    "map_gather.mlir"
     "map_scatter.mlir"
     "scan.mlir"
     "scatter.mlir"
