Adding SplitParameterEncoderPass and iree-encode-parameters. (#22814)
Key components:
- SplitParameterEncoder.cpp: Main pass implementation
  - Analyzes parameter usage across the module
- Hoists hoistable operations (constants, splats, dispatches) to
initializers
  - Generates parameter encoding module
- ParameterOptions: New pipeline options for parameter encoder
configuration
  - --iree-parameter-encoder-mode=consolidate|overlay
  - --iree-parameter-encoder-target= (TBD)
  - --iree-parameter-encoder-output-file=encoder.mlirbc
  - --iree-parameter-encoder-output-scope=encoded (recommended)

This pass produces some of the more sophisticated programs the compiler
has encountered and due to its nature of streaming through large volumes
of
parameters was very sensitive to all the bail-outs that were present.
The good news is that this upgrades the compiler quite a bit, at least!

Paired with this, the iree-encode-parameters tool is designed to run the
parameter
encoder modules produced from the SplitParameterEncoderPass. Though the
modules are normal IREE programs they have a bunch of metadata to aid in
a
more ergonomic tool, automation (as we get into
multi-targeting/retargeting of
encodings), and handling the two-stage initialization. API usage is
possible
to allow runtimes/frameworks/etc to integrate on-the-fly encoding if
desired.

The tool currently bails on multi-targeting and double creates contexts.
Future improvements can finish the compiler->tool->runtime target
detection
and selection logic. The parameters module will need to be reworked to
allow
new parameter providers to be registered (here the input/output files)
after
the context has been created in order to avoid the double creates.

See tests/e2e/parameters/encode_parameters.mlir for a full example:
```
// Compile main module with encoder MLIR output and splat parameter export.
// RUN: iree-compile %s \
// RUN:   --iree-hal-target-device=local \
// RUN:   --iree-hal-local-target-device-backends=vmvx \

--- a/compiler/src/iree/compiler/Utils/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Utils/CMakeLists.txt
@@ -19,7 +19,6 @@ iree_cc_library(
     "EncodingUtils.h"
     "EquivalenceUtils.h"
     "FlatbufferUtils.h"
-    "Folding.h"
     "Indexing.h"
     "IntegerSet.h"
     "ModuleUtils.h"
@@ -54,6 +53,7 @@ iree_cc_library(
     MLIRAffineDialect
     MLIRAnalysis
     MLIRArithDialect
+    MLIRBytecodeWriter
     MLIRFuncDialect
     MLIRFunctionInterfaces
     MLIRIR
