--- a/compiler/src/iree/compiler/Utils/BUILD.bazel
+++ b/compiler/src/iree/compiler/Utils/BUILD.bazel
@@ -53,7 +53,6 @@ iree_compiler_cc_library(
         "EncodingUtils.h",
         "EquivalenceUtils.h",
         "FlatbufferUtils.h",
-        "Folding.h",
         "Indexing.h",
         "IntegerSet.h",
         "ModuleUtils.h",
@@ -79,6 +78,7 @@ iree_compiler_cc_library(
         "@llvm-project//mlir:AffineDialect",
         "@llvm-project//mlir:Analysis",
         "@llvm-project//mlir:ArithDialect",
+        "@llvm-project//mlir:BytecodeWriter",
         "@llvm-project//mlir:DialectUtils",
         "@llvm-project//mlir:FuncDialect",
         "@llvm-project//mlir:FunctionInterfaces",
