[CI] Add rdna4 / gfx1201 / r9700 tests

--- a/.github/workflows/pkgci.yml
+++ b/.github/workflows/pkgci.yml
@@ -64,6 +64,12 @@ jobs:
     if: contains(fromJson(needs.setup.outputs.enabled-jobs), 'test_amd_w7900')
     uses: ./.github/workflows/pkgci_test_amd_w7900.yml
 
+  test_amd_r9700:
+    name: Test AMD R9700
+    needs: [setup, build_packages]
+    if: contains(fromJson(needs.setup.outputs.enabled-jobs), 'test_amd_r9700')
+    uses: ./.github/workflows/pkgci_test_amd_r9700.yml
+
   # TODO(#18238): migrate to new runner cluster
   # test_nvidia_t4:
   #   name: Test NVIDIA T4
@@ -135,6 +141,7 @@ jobs:
       - test_amd_mi250
       - test_amd_mi325
       - test_amd_w7900
+      - test_amd_r9700
       # - test_nvidia_t4
       - test_android
       - test_riscv64
