Enable passing e2e tests for ROCM, VMVX, and Vulkan backends
Enable tests that were previously excluded but now pass:

ROCM/HIP (tests/e2e/linalg):
- conv2d, narrow_n_matmuls, subbyte_to_fp, fp_to_subbyte,
  fp4_f32_conversion, index

VMVX (tests/e2e/linalg):
- argmax, index

VMVX (tests/e2e/linalg_ext_ops):
- attention

Vulkan (tests/e2e/linalg):
- argmax, index

Vulkan (tests/e2e/linalg_ext_ops):
- map_gather, map_scatter, top-k

Vulkan (tests/e2e/stablehlo_ops):
- reverse

Signed-off-by: hanhanW <hanhan0912@gmail.com>

--- a/tests/e2e/linalg/CMakeLists.txt
+++ b/tests/e2e/linalg/CMakeLists.txt
@@ -55,8 +55,10 @@ iree_check_single_backend_test_suite(
   NAME
     check_vmvx_local-task
   SRCS
+    "argmax.mlir"
     "conv2d.mlir"
     "gather_like_ops.mlir"
+    "index.mlir"
     "narrow_n_matmuls.mlir"
     "pack.mlir"
     "pack_dynamic_inner_tiles.mlir"
@@ -89,8 +91,10 @@ iree_check_single_backend_test_suite(
   NAME
     check_vulkan-spirv_vulkan
   SRCS
+    "argmax.mlir"
     "conv2d.mlir"
     "gather_like_ops.mlir"
+    "index.mlir"
     "narrow_n_matmuls.mlir"
     "softmax.mlir"
     "subbyte_to_fp.mlir"
@@ -156,9 +160,15 @@ iree_check_single_backend_test_suite(
     check_rocm_hip
   SRCS
     "argmax.mlir"
+    "conv2d.mlir"
+    "fp4_f32_conversion.mlir"
+    "fp_to_subbyte.mlir"
     "gather_like_ops.mlir"
+    "index.mlir"
+    "narrow_n_matmuls.mlir"
     "pack_i8.mlir"
     "softmax.mlir"
+    "subbyte_to_fp.mlir"
     "unpack.mlir"
   TARGET_BACKEND
     "rocm"
