--- a/tests/e2e/stablehlo_ops/BUILD.bazel
+++ b/tests/e2e/stablehlo_ops/BUILD.bazel
@@ -241,6 +241,7 @@ iree_check_single_backend_test_suite(
             "reduce_window.mlir",
             "remainder.mlir",
             "reshape.mlir",
+            "reverse.mlir",
             "rng_normal.mlir",
             "rng_uniform.mlir",
             "round.mlir",
@@ -264,7 +265,6 @@ iree_check_single_backend_test_suite(
         exclude = [
             "exponential_fp16.mlir",
             "fft.mlir",  # TODO(#9583)
-            "reverse.mlir",  # TODO(#12415): disabled due to miscompilation on Pixel 6.
         ],
     ),
     compiler_flags = [
