[Codegen][MXFP4] Adding SwizzleHintOp alloc flattening pass (#23083)
This is the first of a series of PRs that together implement support in
IREE for XOR swizzling through the SwizzleHintOp.

There are four PRs that need to be merged:
1) Allow rank > 1 swizzle hint op operands and add a pass to flatten
swizzle hint allocs.
2) Add patterns which can fold reshapes and `extract_slice` ops into
empty ops through swizzle hint ops.
3) Add swizzle hint attribute to be set in `lowering_config` and
consumed in `GPUPromoteMatmulOperandsPass`.
4) Update `LLVMGPUSelectLoweringStrategy` Pass to set xor swizzles for
MXFP4 GEMMs.

This is PR 1, which does three things:
- Loosens the restriction on SwizzleHintOp inputs needing to be a Shaped
type of rank 1. We do this because things are a lot simpler during
tiling when you can fold arbitrary shapes into the swizzle hint op and
then flatten later.
- Introduces a pass to flatten allocs associated to `SwizzleHintOps`.
- Moves the verification of flatness of swizzle hint ops to the
`ResolveSwizzleHintOps` pass, prior to removal.

---------

Signed-off-by: Muzammiluddin Syed <muzasyed@amd.com>

--- a/compiler/src/iree/compiler/Codegen/Common/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/Common/BUILD.bazel
@@ -105,6 +105,7 @@ iree_compiler_cc_library(
         "FissionTransferOpsInControlFlow.cpp",
         "FlattenMemRefSubspanPass.cpp",
         "FlattenMemRefs.cpp",
+        "FlattenSwizzleHintAllocs.cpp",
         "FoldAffineMinInDistributedLoops.cpp",
         "FoldSplitReductionAndWorkgroupMappingLoopsPass.cpp",
         "FoldTensorExtractOpPass.cpp",
