--- a/compiler/src/iree/compiler/Codegen/Dialect/GPU/Transforms/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/Dialect/GPU/Transforms/BUILD.bazel
@@ -64,6 +64,7 @@ iree_compiler_cc_library(
         "ExpandUndistributedInnerTiles.cpp",
         "LowerIREEGPUOps.cpp",
         "Passes.cpp",
+        "TestConvertForallToGenericNestGPU.cpp",
         "Transforms.cpp",
         "UnrollToIntrinsics.cpp",
         "VectorizeIREEGPUOps.cpp",
@@ -77,6 +78,8 @@ iree_compiler_cc_library(
         ":PassesIncGen",
         "//compiler/src/iree/compiler/Codegen/Dialect/Codegen/IR:IREECodegenDialect",
         "//compiler/src/iree/compiler/Codegen/Dialect/GPU/IR:IREEGPUDialect",
+        "//compiler/src/iree/compiler/Codegen/Dialect/PCF/IR:PCFDialect",
+        "//compiler/src/iree/compiler/Codegen/Dialect/PCF/Transforms",
         "//compiler/src/iree/compiler/Codegen/Dialect/VectorExt/IR:IREEVectorExtDialect",
         "//compiler/src/iree/compiler/Codegen/Transforms",
         "//compiler/src/iree/compiler/Codegen/Utils",
