--- a/compiler/src/iree/compiler/Codegen/Dialect/GPU/Transforms/test/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/Dialect/GPU/Transforms/test/BUILD.bazel
@@ -20,6 +20,7 @@ iree_lit_test_suite(
         # keep sorted
         [
             "combine_barrier_regions.mlir",
+            "convert_forall_to_generic_nest_gpu.mlir",
             "distribute_inner_tiled_to_lanes.mlir",
             "expand_undistributed_inner_tiles.mlir",
         ],
