--- a/compiler/src/iree/compiler/Codegen/Dialect/PCF/Transforms/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/Dialect/PCF/Transforms/BUILD.bazel
@@ -35,7 +35,7 @@ iree_gentbl_cc_library(
 iree_compiler_cc_library(
     name = "Transforms",
     srcs = [
-        "ConvertForallToLoops.cpp",
+        "ConvertForallToPCF.cpp",
         "ConvertSRefToMemRef.cpp",
         "FuseConsumers.cpp",
         "FusePCFWrites.cpp",
