[CPU] Add fp8 emulation support for CPU backend (#23119)
Extend ConvertUnsupportedFloatArithPass to handle the CPU backend by
emulating fp8 arithmetic operations through f32. This is needed because
LLVM doesn't natively support fptrunc/fpext for fp8 types.

- Add TruncFToFP8 pattern: emulates f32 -> fp8 using integer bit
manipulation (extract sign/exp/mant, adjust bias, round, pack to i8).
- Add ExtFFromFP8 pattern: emulates fp8 -> f32 using integer bit
manipulation (unpack from i8, adjust bias, pack to i32).
- Supported fp8 formats:
  * FNUZ (f8E5M2FNUZ, f8E4M3FNUZ): NaN=0x80, no Inf, no negative zero
  * IEEE (f8E5M2): Has Inf and negative zero
  * FN (f8E4M3FN): No Inf, has negative zero
- Handle both scalar and vector types.
- Add lit tests for CPU target emulation.
- Add e2e tests (small_float_arith.mlir) for CPU backend.
- E2E tests: Round-to-nearest-even, denormal conversions, and special
value handling

It is a step towards https://github.com/iree-org/iree/issues/23105

---------

Signed-off-by: hanhanW <hanhan0912@gmail.com>
Signed-off-by: Keshav Vinayak Jha <keshavvinayakjha@gmail.com>

--- a/tests/e2e/linalg/BUILD.bazel
+++ b/tests/e2e/linalg/BUILD.bazel
@@ -29,6 +29,7 @@ LLVM_SRCS = enforce_glob(
         "pack.mlir",
         "pack_dynamic_inner_tiles.mlir",
         "pack_i8.mlir",
+        "small_float_arith.mlir",
         "softmax.mlir",
         "subbyte_to_fp.mlir",
         "unpack.mlir",
@@ -89,6 +90,7 @@ VMVX_SRCS = enforce_glob(
         "fp_to_subbyte.mlir",
         "fp4_f32_conversion.mlir",
         "large_linalg_matmul.mlir",
+        "small_float_arith.mlir",
         "subbyte_to_fp.mlir",
     ],
 )
@@ -140,6 +142,7 @@ VULKAN_SRCS = enforce_glob(
         "pack.mlir",
         "pack_dynamic_inner_tiles.mlir",
         "pack_i8.mlir",
+        "small_float_arith.mlir",
         "unpack.mlir",
     ],
 )
@@ -199,6 +202,7 @@ CUDA_SRCS = enforce_glob(
         # See bug #20294
         "pack.mlir",
         "pack_dynamic_inner_tiles.mlir",
+        "small_float_arith.mlir",
     ],
 )
 
@@ -239,6 +243,7 @@ ROCM_SRCS = enforce_glob(
         # See bug #20294
         "pack.mlir",
         "pack_dynamic_inner_tiles.mlir",
+        "small_float_arith.mlir",
     ],
 )
 
