Adding configurable compiler plugins for Bazel builds. This implements a plugin configuration system for Bazel that mirrors how HAL drivers are configured in bazel today and our plugins are configured in cmake, allowing users to select which compiler plugins get linked into iree-compile. The previous approach hardcoded all plugins via a static StaticLinkedPlugins.inc file with no way to exclude backends you don't need or can't build.
The core mechanism uses Bazel's string_list_flag with per-plugin
config_setting rules and select() for conditional compilation. A new
macro iree_compiler_plugins() in compiler/plugins/plugins.bzl generates
all the boilerplate: the flag definition, config settings, genrules
for .inc fragments, and aggregate targets for the PluginAPI/Config to
consume. This keeps plugin registration centralized in a single map
rather than scattered across the repository.

Configuration happens through configure_bazel.py which now detects
available toolkits and submodules to determine what can actually be
built. CUDA detection checks CUDA_ROOT/CUDA_HOME/CUDA_PATH environment
variables and nvcc in PATH, following MLIR's search order. ROCm
detection similarly checks ROCM_PATH/ROCM_ROOT/ROCM_HOME and hipcc.
The stablehlo and torch-mlir input plugins check for their respective
submodules being initialized.

The new IREE_COMPILER_PLUGINS environment variable supports an 'all'
value that expands to all plugins that can be built on the current
system, with optional exclusions via all,-plugin_name syntax. Running
iree-bazel-configure now defaults to all unless explicitly overridden,
giving users a batteries-included experience while still allowing
selective builds for faster iteration.

For torch-mlir specifically, enabling the plugin requires the
repository rule to generate real targets rather than stubs. This is
handled by emitting `--repo_env=IREE_INPUT_TORCH=ON` when torch is in
the enabled set, which the torch_mlir_auto_configure rule checks
during repository

--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -80,6 +80,7 @@ use_repo(
     "nccl",
     "spirv_cross",
     "stablehlo",
+    "torch-mlir",
     "tracy_client",
     "vulkan_headers",
     "webgpu_headers",
