--- a/compiler/src/iree/compiler/Codegen/Common/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Codegen/Common/CMakeLists.txt
@@ -54,6 +54,7 @@ iree_cc_library(
   HDRS
     "BufferizationAnalysis.h"
     "CombineLayoutTransformation.h"
+    "CombineLayoutTransformationForMapGather.h"
     "EmulateNarrowType.h"
     "EncodingUtils.h"
     "ExtractAddressComputation.h"
@@ -74,6 +75,7 @@ iree_cc_library(
     "BufferizeDispatchTensorLoadStore.cpp"
     "CleanupBufferAllocViewPass.cpp"
     "CombineLayoutTransformation.cpp"
+    "CombineLayoutTransformationForMapGather.cpp"
     "ConcretizePadResultShape.cpp"
     "ConfigTrackingCanonicalizer.cpp"
     "ConvertAccGEMMToGEMMPass.cpp"
