--- a/compiler/src/iree/compiler/Codegen/Common/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/Common/BUILD.bazel
@@ -81,6 +81,7 @@ iree_compiler_cc_library(
         "BufferizeDispatchTensorLoadStore.cpp",
         "CleanupBufferAllocViewPass.cpp",
         "CombineLayoutTransformation.cpp",
+        "CombineLayoutTransformationForMapGather.cpp",
         "ConcretizePadResultShape.cpp",
         "ConfigTrackingCanonicalizer.cpp",
         "ConvertAccGEMMToGEMMPass.cpp",
@@ -179,6 +180,7 @@ iree_compiler_cc_library(
     hdrs = [
         "BufferizationAnalysis.h",
         "CombineLayoutTransformation.h",
+        "CombineLayoutTransformationForMapGather.h",
         "EmulateNarrowType.h",
         "EncodingUtils.h",
         "ExtractAddressComputation.h",
