--- a/compiler/src/iree/compiler/Dialect/Util/Analysis/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Dialect/Util/Analysis/CMakeLists.txt
@@ -28,6 +28,7 @@ iree_cc_library(
     MLIRAnalysis
     MLIRControlFlowInterfaces
     MLIRIR
+    MLIRLoopLikeInterface
     MLIRPass
     MLIRSCFDialect
     MLIRSupport
